// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseDatasourceOrThrow success environment variable reference finds when nicely formatted 1`] = `
Object {
  "_tag": "ParsedDatasourceUrlEnvironmentVariable",
  "environmentVariableName": "FOOBAR",
  "name": "db",
  "provider": "postgres",
  "sources": Object {
    "url": "env(\\"FOOBAR\\")",
  },
}
`;

exports[`parseDatasourceOrThrow success environment variable reference finds when white space before or after quotes 1`] = `
Object {
  "_tag": "ParsedDatasourceUrlEnvironmentVariable",
  "environmentVariableName": "FOOBAR",
  "name": "db",
  "provider": "postgres",
  "sources": Object {
    "url": "env(  \\"FOOBAR\\"  )",
  },
}
`;

exports[`parseDatasourceOrThrow success finds inline connection string 1`] = `
Object {
  "_tag": "ParsedDatasourceUrlInline",
  "connectionString": "...",
  "name": "db",
  "provider": "postgres",
  "sources": Object {
    "url": "\\"...\\"",
  },
}
`;

exports[`parseDatasourceOrThrow success ignores comments a whole datasource block 1`] = `
Object {
  "_tag": "ParsedDatasourceUrlEnvironmentVariable",
  "environmentVariableName": "...",
  "name": "db",
  "provider": "postgres",
  "sources": Object {
    "url": "env(\\"...\\")",
  },
}
`;

exports[`parseDatasourceOrThrow success ignores comments single field lines 1`] = `
Object {
  "_tag": "ParsedDatasourceUrlEnvironmentVariable",
  "environmentVariableName": "...",
  "name": "db",
  "provider": "postgres",
  "sources": Object {
    "url": "env(\\"...\\")",
  },
}
`;

exports[`parseDatasourceOrThrow thrown errors An invalid provider field causes an error 1`] = `"Failed to parse datasource: No valid provder property set."`;

exports[`parseDatasourceOrThrow thrown errors Datasource block missing url field causes an error 1`] = `"Failed to parse datasource: No valid provder property set."`;

exports[`parseDatasourceOrThrow thrown errors Missing a provider field causes an error 1`] = `"Failed to parse datasource: No valid provder property set."`;

exports[`parseDatasourceOrThrow thrown errors Missing a url field causes an error 1`] = `
"Failed to parse datasource: No url property found:

Pattern:
/^\\\\s*url\\\\s*=\\\\s*([^\\\\n]+)\\\\s*$/gm

Code:
datasource db {
            provider = \\"sqlite\\"
          }"
`;

exports[`parseDatasourceOrThrow thrown errors multiple data source blocks causes an error 1`] = `"Failed to parse datasource: Multiple datasource blocks found."`;
